Add tabs to app

--- a/apps/mobile/src/i18n/locales/en.json
+++ b/apps/mobile/src/i18n/locales/en.json
@@ -92,5 +92,18 @@
     "upcomingStatus": "UPCOMING",
     "defaultLocation": "Location",
     "typePrefix": "Shift Type: "
+  },
+  "tabs": {
+    "home": "Home",
+    "chat": "Chat",
+    "account": "Account"
+  },
+  "chat": {
+    "title": "Messages Dummy",
+    "noMessages": "No messages yet"
+  },
+  "account": {
+    "title": "Account",
+    "settings": "Settings"
   }
 }
