--- a/apps/web/app/guard/i18n/locales/en.json
+++ b/apps/web/app/guard/i18n/locales/en.json
@@ -1,9 +1,9 @@
 {
   "login": {
-    "title": "Guard Portal",
+    "title": "Employee Portal",
     "subtitle": "Sign in to manage your shifts and attendance.",
     "employeeIdLabel": "Employee ID",
-    "employeeIdPlaceholder": "Enter your Guard ID",
+    "employeeIdPlaceholder": "Enter your Employee ID",
     "passwordLabel": "Password",
     "passwordPlaceholder": "Enter your password",
     "submitButton": "Sign In",
@@ -14,7 +14,7 @@
   },
   "dashboard": {
     "welcome": "Welcome,",
-    "guardCode": "Guard Code:",
+    "guardCode": "Employee Code:",
     "noActiveShift": "You have no active shifts",
     "changePassword": "Change Password",
     "logout": "Logout",
