--- a/apps/web/app/employee/i18n/locales/id.json
+++ b/apps/web/app/employee/i18n/locales/id.json
@@ -50,9 +50,10 @@
     "recordedAt": "Kehadiran direkam pada {{date}}",
     "notRecordedTitle": "Kehadiran Tidak Terekam",
     "requiredTitle": "Kehadiran Diperlukan",
-    "lateMessage": "Batas waktu presensi terlewat. Harap hubungi administrator Anda.",
+    "lateMessage": "Batas waktu kehadiran terlewati. Silakan rekam kehadiran terlambat.",
     "requiredMessage": "Harap rekam kehadiran Anda untuk memulai shift.",
     "submitButton": "Rekam Kehadiran",
+    "submitLateButton": "Rekam Kehadiran Terlambat",
     "alreadyRecorded": "Kehadiran sudah direkam untuk Shift ini."
   },
   "checkin": {
@@ -66,13 +67,16 @@
     "openStatus": "Check-in BUKA",
     "missed": "Jendela terlewat",
     "remainingTime": "Sisa waktu: {{time}} detik",
+    "lateStatus": "Anda terlambat untuk check-in ini",
     "gettingLocation": "Mendapatkan lokasi...",
     "locationRequired": "Lokasi diperlukan.",
     "processing": "Melakukan check-in...",
     "locationError": "Gagal mendapatkan lokasi",
     "titleOpen": "Check-in Dibuka!",
+    "titleLate": "Check-in Terlambat",
     "titleNext": "Check-in Berikutnya",
-    "submitButton": "CHECK IN SEKARANG"
+    "submitButton": "CHECK IN SEKARANG",
+    "submitLateButton": "SUBMIT CHECK-IN TERLAMBAT"
   },
   "passwordChange": {
     "successTitle": "Sukses",
