Add late minutes to checkin and attendance display

--- a/apps/mobile/src/i18n/locales/en.json
+++ b/apps/mobile/src/i18n/locales/en.json
@@ -69,7 +69,8 @@
     "locationError": "Failed to get location",
     "titleOpen": "Check-in Open!",
     "titleNext": "Next Check-in",
-    "submitButton": "CHECK IN NOW"
+    "submitButton": "CHECK IN NOW",
+    "graceMinutes": "Grace minutes: {{minutes}}"
   },
   "passwordChange": {
     "successTitle": "Success",
