Add image viewing and keyboard control

--- a/apps/mobile/src/i18n/locales/en.json
+++ b/apps/mobile/src/i18n/locales/en.json
@@ -104,7 +104,8 @@
   },
   "chat": {
     "title": "Messages",
-    "noMessages": "No messages yet"
+    "noMessages": "No messages yet",
+    "placeholder": "Type a message..."
   },
   "account": {
     "title": "Account",
