--- a/apps/mobile/src/i18n/locales/id.json
+++ b/apps/mobile/src/i18n/locales/id.json
@@ -3,9 +3,9 @@
     "title": "Portal Karyawan",
     "subtitle": "Masuk untuk mengelola shift dan kehadiran Anda.",
     "employeeIdLabel": "ID Karyawan",
-    "employeeIdPlaceholder": "Masukkan ID Karyawan Anda",
+    "employeeIdPlaceholder": "Masukkan ID Karyawan",
     "passwordLabel": "Kata Sandi",
-    "passwordPlaceholder": "Masukkan kata sandi Anda",
+    "passwordPlaceholder": "Masukkan Kata Sandi",
     "submitButton": "Masuk",
     "errorTitle": "Kesalahan Login",
     "errorMessage": "Login gagal. Silakan periksa kredensial Anda.",
