Redesign chat page

--- a/packages/shared/src/locales/en.json
+++ b/packages/shared/src/locales/en.json
@@ -122,7 +122,25 @@
     "placeholder": "Type a message...",
     "connected": "Online",
     "disconnected": "Disconnected",
-    "read": "Read"
+    "read": "Read",
+    "status_active": "connected",
+    "status_offline": "offline",
+    "today": "Today",
+    "yesterday": "Yesterday",
+    "limit_reached": "Limit reached",
+    "limit_reached_desc": "You can only attach up to 4 files.",
+    "pick_error": "Error",
+    "pick_error_desc": "Failed to pick files.",
+    "camera_permission": "Permission required",
+    "camera_permission_desc": "We need camera permission to take photos.",
+    "camera_error": "Error",
+    "camera_error_desc": "Failed to take photo.",
+    "send_error": "Error",
+    "send_error_desc": "Failed to send message.",
+    "error_invalid_files": "Only image and video files are allowed",
+    "processing_failed": "Failed to process files",
+    "send_failed": "Failed to send message",
+    "image_viewer": "Image Viewer"
   },
   "account": {
     "title": "Account",
