--- a/packages/shared/src/locales/id.json
+++ b/packages/shared/src/locales/id.json
@@ -122,7 +122,25 @@
     "placeholder": "Ketik pesan...",
     "connected": "Online",
     "disconnected": "Terputus",
-    "read": "Dibaca"
+    "read": "Dibaca",
+    "status_active": "tersambung",
+    "status_offline": "offline",
+    "today": "Hari ini",
+    "yesterday": "Kemarin",
+    "limit_reached": "Batas tercapai",
+    "limit_reached_desc": "Anda hanya dapat melampirkan hingga 4 file.",
+    "pick_error": "Kesalahan",
+    "pick_error_desc": "Gagal memilih file.",
+    "camera_permission": "Izin diperlukan",
+    "camera_permission_desc": "Kami membutuhkan izin kamera untuk mengambil foto.",
+    "camera_error": "Kesalahan",
+    "camera_error_desc": "Gagal mengambil foto.",
+    "send_error": "Kesalahan",
+    "send_error_desc": "Gagal mengirim pesan.",
+    "error_invalid_files": "Hanya file gambar dan video yang diperbolehkan",
+    "processing_failed": "Gagal memproses file",
+    "send_failed": "Gagal mengirim pesan",
+    "image_viewer": "Penampil Gambar"
   },
   "account": {
     "title": "Akun",
