Redesign alert and toast in mobile app

--- a/packages/shared/src/locales/en.json
+++ b/packages/shared/src/locales/en.json
@@ -29,6 +29,7 @@
   },
   "common": {
     "cancel": "Cancel",
+    "confirm": "Confirm",
     "minutes": "minutes",
     "seconds": "seconds",
     "loading": "Loading...",
